Changed the font size on smaller screens, to help with the formatting issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@ html {
 }
 @media only screen and (max-width: 600px) {
   html {
-    font-size: 40%;
+    font-size: 35%;
   }
 }
 
@@ -1506,7 +1506,7 @@ body {
 }
 @media only screen and (max-width: 900px) {
   .example {
-    height: 750px;
+    height: 800px;
   }
 }
 .example h2 {
