--- a/assets/sass/sections/_html.scss
+++ b/assets/sass/sections/_html.scss
@@ -19,7 +19,7 @@ html {
     font-size: 50%;
   }
   @media only screen and (max-width: $bp-xsmall) {
-    font-size: 40%;
+    font-size: 35%;
   }
 }
 body {
